--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,10 @@
             <artifactId>jsoup</artifactId>
             <version>1.13.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.1</version>
+        </dependency>        
     </dependencies>
 </project>
